GL/src/test/deca/context/valid/deca_complet/new.deca
// Description:
//   test des heritages entre classes
//
// Resultats:
//    Ok
//
class B{}
class A extends B{}

{
    B a = new A();
}