GL/src/test/deca/context/invalid/provided/ous.deca
class A{
    protected int x;
    


}


{
    A a = new A();
    a.x = 19262;
    print(a.x);
}
